working on file linkage

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Feedback</title>
+</head>
+<body>
+  <form action="/index" method="get">
+    <button>Authorize</button>
+  </form>
+</body>
+</html>
