more stuff working

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Feedback</title>
 </head>
 <body>
-  <a href="http://0.0.0.0:5000/"> kljlk </a>
+  <button href="http://0.0.0.0:5000/"> Button </button>
 </body>
 </html>
