--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Feedback</title>
 </head>
 <body>
-  <button href="http://0.0.0.0:5000/"> Button </button>
+  <button>
+    <a href="http://0.0.0.0:5000/"> Button </a>
+  </button>
 </body>
 </html>
