--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Feedback</title>
 </head>
 <body>
-  <button>
+  <!-- <button> -->
     <a href="http://0.0.0.0:5000/"> Button </a>
-  </button>
+  <!-- </button> -->
 </body>
 </html>
