--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <title>Feedback</title>
 </head>
 <body>
-  <!-- <button> -->
-    <a href="http://0.0.0.0:5000/"> Butghgfhjghjgjton </a>
-  <!-- </button> -->
+  <iframe src="http://0.0.0.0:5000/get_playlist", emotion=0 width="250" height="80" frameborder="0" allowtransparency="true"></iframe>
+  <a href="http://0.0.0.0:5000/"> Click if inaccurate </a>
 </body>
 </html>
