--- a/index.html
+++ b/index.html
@@ -3,10 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <title>Feedback</title>
+  <style>
+    body {
+      background-color: lightblue;
+    }
+    .button {
+      font: bold 11px Arial;
+      text-decoration: none;
+      background-color: #EEEEEE;
+      color: #333333;
+      text-align: center;
+      padding: 2px 6px 2px 6px;
+      border-top: 1px solid #CCCCCC;
+      border-right: 1px solid #333333;
+      border-bottom: 1px solid #333333;
+      border-left: 1px solid #CCCCCC;
+    }
+  </style>
 </head>
 <body>
-  <a href="http://0.0.0.0:5000/">
-    <img src="cat.jpeg" alt="Click me to login" style="width:1033px;height:581px;border:0;">
+  <a href="http://0.0.0.0:5000/" class="button">
+    <!-- <img src="cat.jpeg" alt="Click me to login" style="width:1033px;height:581px;border:0;"> -->
+
   </a>
 </body>
 </html>
